# CG

./: .gitignore  README.md
CG-TP-21-22/Material/: xml_syntax.xml
Fase 1/models/: box.3d  sphere.3d
Fase 1/scenes/: box.xml  cone.xml  everyone.xml  plane.xml
Fase 1/src/: CMakeLists.txt  box.cpp  (+9 more)
Fase1/: CMakeCache.txt  Makefile  cmake_install.cmake
Fase1/src/: CMakeLists.txt  CMakeListsOld.txt  box.cpp  box.h  box.hpp  cone.cpp  cone.hpp  engine.cpp  generator.cpp  lights.cpp  lights.hpp  main.cpp  models.cpp  models.hpp  normalTexPoint.cpp  normalTexPoint.hpp  patches.cpp  patches.hpp  plane.cpp  plane.hpp  point.cpp  point.h  point.hpp  sphere.cpp  sphere.hpp  torus.cpp  torus.hpp  transformation.cpp  transformation.hpp  uga.cpp  uga.hpp  vector.cpp  vector.hpp
Fase1/src/GugaBuild/: .torus.3d.swp  CMakeCache.txt  Makefile  box2.3d  boxxy.3d  cat.xml  cat2.xml  cmake_install.cmake  cone.3d  cone2.3d  cubinho.xml  engine  generator  plane.3d  plane.xml  solarsystem.xml  sphere.3d  sphere2.3d  ss2.xml  testinho.xml  torus.3d  torus.xml
Fase1/src/LinuxBuild/: CMakeCache.txt  Makefile  cat.xml  cmake_install.cmake  cubinho.xml  engine  generator  sphere.3d  torus.3d  torus.xml
Fase1/src/NewBuild/: CMakeCache.txt  Makefile  cat2.xml  cmake_install.cmake  compile_commands.json  cone2.3d  cubinho.xml  engine  generator  plane.xml  solarsystem.xml  teapot.3d  teapot3.3d  testinho.xml  torus  torus2.3d
Fase1/src/builddumb/: CMakeCache.txt  Makefile  cmake_install.cmake  cone.3d  engine  generator  plane.3d  plano.3d  project  sphere.3d  teste.xml  teste2.xml
(+66 files in other folders)
